tests/error/type_errors/unpack_not_enough.err
Error: Too many values to unpack (at $FILE:6:10)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     a, b, c = 1, True
  |           ^ Unexpected assignment target (expected 2, got 3)

Guppy compilation failed due to 1 previous error
